ks8 testVarios-poliSthefano/KS8 valuewineBack microservicio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: sthefanopoli/microservicio_valuewine:dev
        ports:
        - containerPort: 5000
