ks8 testVarios-poliSthefano/KS8 valuewineBack microservicio/ingressbackend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service
            port:
              number: 5000
